--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script src="./js/scripts.js"></script>
 </head>
 <body>
-    
+    <form id="formWord">
+        <label for="userInput">Please Enter In a Number:
+          <input id="userInput" type="text">
+        </label>
+        <br>
+        <button type="submit" id="submitBtn">Submit</button>
+    </form>  
+    <br>
+    <p id="results"></p>
 </body>
 </html>
