add beep function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./js/scripts.js"></script>
 </head>
 <body>
-    <form id="formWord">
+    <form id="input-form">
         <label for="userInput">Please Enter In a Number:
           <input id="userInput" type="text">
         </label>
