add error handling

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
         </label>
         <br>
         <button type="submit" id="submitBtn">Submit</button>
-    </form>  
-    <br>
-    <p id="results"></p>
+    </form>   
+    
+    
+    <div id="resultsFromUser" class="defaultSettingHidden">
+    <!-- <p id="results" class="defaultSettingHidden"></p> -->
+    </div>
+
+    <div id="error-passage">
+    </div>
 </body>
 </html>
