--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mr roger robot</title>
     <script src="./js/scripts.js"></script>
+    <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 <body>
     <form id="input-form">
@@ -17,9 +19,14 @@
     </form>   
     
     
+
+    <p id="results" class="defaultSettingHidden"></p> 
+
+
     <div id="resultsFromUser" class="defaultSettingHidden">
-    <!-- <p id="results" class="defaultSettingHidden"></p> -->
-    </div>
+        <p id="results"></p> 
+    </div>  
+
 
     <div id="error-passage">
     </div>
