clear user results and throw error message

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,28 +8,20 @@
     <title>mr roger robot</title>
     <script src="./js/scripts.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
-
 </head>
+
 <body>
     <form id="input-form">
         <label for="userInput">Please Enter In a Number:
-          <input id="userInput" type="text">
+            <input id="userInput" type="text">
         </label>
         <br>
         <button type="submit" id="submitBtn">Submit</button>
-    </form>   
-    
-    
-
-    <p id="results" class="defaultSettingHidden"></p> 
-
-
+    </form>
     <div id="resultsFromUser" class="defaultSettingHidden">
-        <p id="results"></p> 
-    </div>  
-
-
-    <div id="error-passage">
     </div>
+    <br>
+    <div id="error-passage" class="defaultSettingHidden"></div>
 </body>
+
 </html>
