add reverse results function

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mr roger robot</title>
+    <title>Mr. Robo Roger</title>
     <script src="./js/scripts.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -16,12 +16,20 @@
             <input id="userInput" type="text">
         </label>
         <br>
+        <br>
         <button type="submit" id="submitBtn">Submit</button>
+        <button type="button" class="defaultSettingHidden" id="reverse">Reverse</button>
+    
     </form>
     <div id="resultsFromUser" class="defaultSettingHidden">
     </div>
     <br>
     <div id="error-passage" class="defaultSettingHidden"></div>
-</body>
 
+
+    <div id="reversed" class="defaultSettingHidden"></div>
+
+
+
+</body>
 </html>
