reverse order of array values after clicking reverse button

--- a/index.html
+++ b/index.html
@@ -18,18 +18,16 @@
         <br>
         <br>
         <button type="submit" id="submitBtn">Submit</button>
-        <button type="button" class="defaultSettingHidden" id="reverse">Reverse</button>
-    
+        <br>
+        <br>
+        <button type="button" class="defaultSettingHidden" id="reverse">Reversed Order</button>
+
     </form>
-    <div id="resultsFromUser" class="defaultSettingHidden">
-    </div>
+    <br>
+    <div id="resultsFromUser" class="defaultSettingHidden"></div>
     <br>
     <div id="error-passage" class="defaultSettingHidden"></div>
-
-
     <div id="reversed" class="defaultSettingHidden"></div>
-
-
-
 </body>
+
 </html>
